--- a/src/PP/RequestBundle/Resources/views/layout.html.twig
+++ b/src/PP/RequestBundle/Resources/views/layout.html.twig
@@ -23,7 +23,7 @@
 
 
 {% block body %}
-    <div class="demand-list" >
+    <div class="main-left" >
         {% block requestBody %}
         {% endblock %}
     </div>
