--- a/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
+++ b/src/PP/PropositionBundle/Resources/views/proposition/propositionPopup.html.twig
@@ -16,8 +16,10 @@
 			<div class="action-group center">
 				<a class="icon share" href="#"></a>
 				<a target="_self" class="icon download" href="{{ proposition.image }}" download="{{ proposition.title }}"></a>
-				<a class="icon report" href="#"></a>
-				<a class="icon delete" href="#"></a>
+                                {% endverbatim %}
+				<a ng-if="!proposition.author.isAuthor" class="icon report" href="#"></a>                                
+				<a ng-if="proposition.author.isAuthor" class="icon delete" href="#"></a>
+                                {% verbatim %}
 			</div>
 			<div class="action-group right">
 				<a ng-if="proposition.selected"class="selecting-prop selected" href="#">Selected picture</a>
