--- a/src/PP/RequestBundle/Resources/public/css/mixin.sass
+++ b/src/PP/RequestBundle/Resources/public/css/mixin.sass
@@ -16,10 +16,10 @@
 		font-weight: normal
 		font-style: normal
 
-@mixin icomoon()
+@mixin pp-font()
 	@font-face
-		font-family: 'icomoon'
-		src: url('../fonts/icomoon.eot?oykrxp')
-		src: url('../fonts/icomoon.eot?oykrxp#iefix') format("embedded-opentype"), url('../fonts/icomoon.ttf?oykrxp') format("truetype"), url('../fonts/icomoon.woff?oykrxp') format("woff"), url('../fonts/icomoon.svg?oykrxp#icomoon') format("svg")
+		font-family: 'pp-font'
+		src: url('../fonts/pp-font.eot')
+		src: url('../fonts/pp-font.eot') format("embedded-opentype"), url('../fonts/pp-font.ttf') format("truetype"), url('../fonts/pp-font.woff') format("woff"), url('../fonts/pp-font.svg') format("svg")
 		font-weight: normal
 		font-style: normal
