--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -107,10 +107,15 @@
     <script src="https://code.angularjs.org/1.4.7/angular-sanitize.min.js"    type="text/javascript"></script>
     <script type="text/javascript" src="http://alexandrejolly.com:3000//client.js"></script>                     
     
+     {% javascripts filter='?yui_js' '@PPPropositionBundle/Resources/public/js/popupController.js'
+    %}   
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+    
     {% block js %}                                         
     {% endblock %}
 
-    {% javascripts filter='yui_js''@PPRequestBundle/Resources/public/js/global.js' 
+    {% javascripts filter='?yui_js''@PPRequestBundle/Resources/public/js/global.js' 
                                    '@PPHeaderBundle/Resources/public/js/headerApp.js'
                                    '@PPRequestBundle/Resources/public/js/lazyLoadDirective.js' 
                                    '@PPMessageBundle/Resources/public/js/messageApp.js'
@@ -119,6 +124,9 @@
     %}   
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
+    
+    
+   
 
 </body>
 </html>
