--- a/src/PP/HeaderBundle/Resources/views/header/header.html.twig
+++ b/src/PP/HeaderBundle/Resources/views/header/header.html.twig
@@ -20,26 +20,7 @@
                     <a id="notificationButton" class="notification {% if currentUser.notificationsNb > 0 %}alert{% endif %}" href="" title="Notifications" id="notificationsNew" ng-click="header.showNotifications()">
                         <div id="notificationsNb" class="number">{% if currentUser.notificationsNb != null %}{{ currentUser.notificationsNb }}{% else %}0{% endif %}</div>
                     </a>                   
-                    <style>
-                        .loading {
-                        position: absolute;
-                        left: 46%;
-                        top: 40%;
-                        margin: -25px 0 -25px 0;
-                        border-bottom: 2px solid rgba(0, 0, 0, .1);
-                        border-left: 2px solid rgba(0, 0, 0, .1);
-                        border-right: 2px solid rgba(0, 0, 0, .1);
-                        border-top: 2px solid rgba(0, 0, 0, .4);
-                        border-radius: 100%;
-                        height: 30px;
-                        width: 30px;
-                        animation: rot .6s infinite linear;
-                        }
-                        @keyframes rot {
-                                from {transform: rotate(0deg);}
-                                to {transform: rotate(359deg);}
-                        }
-                    </style>
+                    
                     {# notification list #}
                     {% verbatim %}                     
                         <div id="notificationList" class="dropdown notif">
@@ -48,7 +29,7 @@
                                 <span class="caret-inner"></span>
                             </div>                           
                             <ul class="notifs">
-                                <li id="noNotification" style="display:none;">No notification yet</li>
+                                <li id="noNotification" class="no-notification" style="display:none;">No notification yet</li>
                                 <li id="loadingNotif" style="height: 50px" class="notif load-content">                                    
                                     <span class="bubble"></span>                                    
                                 </li>
